Progress monitor API
Signed-off-by: azerr <azerr@redhat.com>